# MemCoach

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
ckpt/memcoach/: memcoach_internvl_paper.pt  metadata_neg.json
config/: test_set_scenes_seed42.json
config/api/: server.yaml
config/data_generation/student/: debug.yaml  gpt5_mini.yaml  internvl3_5_8B.yaml
config/data_generation/teacher/: debug.yaml  gpt5_mini.yaml  internvl3_5_8B.yaml
config/evaluation/editing/: editing_baseline.yaml  memcoach.yaml  teacher_oracle.yaml  zero_shot.yaml
config/method_steering/inference/: config.yaml  config_paper.yaml  internvl3_5_8B.yaml  internvl3_5_8B_paper.yaml
config/method_steering/training/: internvl3_5_8B_negative.yaml  internvl3_5_8B_positive.yaml
docs/: index.html  llms.txt
docs/static/css/: index.css
scripts/: schedule_python.sh  schedule_sbatch.sh
scripts/slurm_configs/: cluster_env.sh  leonardo_cpu.sh  leonardo_gpu.sh  todi_gpu.sh
src/analysis/: editing_metrics.py
src/api/: app.py  config.py  dependencies.py  schema.py
src/models/image_text_to_image/: _base.py  _flux_klein.py  _flux_kontext.py  _qwen_image_edit.py  model_factory.py
src/models/image_text_to_text/: _base.py  _hf.py  _litellm.py  (+1 more)
src/utils/: _logging_utils.py  _openrouter_utils.py  _runtime_paths.py  _sharding_via_slurm.py
tests/api/: test_app.py
tests/models/: test_edit.py  test_hf.py  test_litellm.py  test_mem.py  test_parser.py  test_prompt_builder.py
web/camera/: README.md  app.js  haptics.js  index.html  styles.css
(+26 files in other folders)
